sgleam-core-tests/tests/snapshots/integration__run_images@overlay_offset1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/overlay_offset1.gleam
---

