sgleam-core-tests/tests/snapshots/integration__run_images@overlay_xy1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/overlay_xy1.gleam
---
<svg width="40.0" height="20.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 20.0 0.0 L 40.0 0.0 L 40.0 20.0 L 20.0 20.0 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
    <path d="M 0.0 0.0 L 20.0 0.0 L 20.0 20.0 L 0.0 20.0 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
  </g>
</svg>
