sgleam-core-tests/tests/snapshots/integration__run_images@place_image_align3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/place_image_align3.gleam
---

