sgleam-core-tests/tests/snapshots/integration__run_images@place_line2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/place_line2.gleam
---
<svg width="40.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="40.0" height="40.0" transform="rotate(0.0 20.0 20.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0.0 0.0 L 40.0 0.0 L 40.0 40.0 L 0.0 40.0 Z" fill="rgba(211, 211, 211, 1.0)" />
      <path d="M -10.0 50.0 L 50.0 -10.0" fill="none" stroke="rgba(128, 0, 0, 1.0)" />
    </g>
  </g>
</svg>
