sgleam-core-tests/tests/snapshots/integration__run_images@place_polygon2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/place_polygon2.gleam
---
<svg width="180.0" height="180.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="180.0" height="180.0" transform="rotate(0.0 90.0 90.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0.0 0.0 L 180.0 0.0 L 180.0 180.0 L 0.0 180.0 Z" fill="rgba(255, 255, 0, 1.0)" />
      <path d="M 109.0 160.0 L 26.0 148.0 L 46.0 36.0 L 93.0 44.0 L 89.0 68.0 L 122.0 72.0 Z" fill="none" stroke="rgba(0, 0, 139, 1.0)" />
    </g>
  </g>
</svg>
